--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
       <!-- Control buttons -->
       <button class="btn btn-next">&#62;</button>
       <button class="btn btn-prev">&#60;</button>
+
+      <!-- Control dots -->
+      <div class="dot-container">
+        <button class="dot" data-slide="0"></button>
+        <button class="dot" data-slide="1"></button>
+        <button class="dot" data-slide="2"></button>
+        <button class="dot" data-slide="3"></button>
+      </div>
     </div>
 
     <script type="module" src="/src/main.ts"></script>
