feat: add autoplay

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
         <button class="dot" data-slide="2"></button>
         <button class="dot" data-slide="3"></button>
       </div>
+
+      <button aria-label="autoplay" class="autoplay autoplay-start">
+        <img src="/public/play.svg" alt="" />
+      </button>
+      <button aria-label="autoplay" class="autoplay autoplay-pause hidden">
+        <img src="/public/pause.svg" alt="" />
+      </button>
     </div>
 
     <script type="module" src="/src/main.ts"></script>
