refactor: update package

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       </div>
 
       <button aria-label="autoplay" class="autoplay autoplay-start">
-        <img src="/public/play.svg" alt="" />
+        <img src="/play.svg" alt="" />
       </button>
       <button aria-label="autoplay" class="autoplay autoplay-pause hidden">
-        <img src="/public/pause.svg" alt="" />
+        <img src="/pause.svg" alt="" />
       </button>
     </div>
 
