--- a/index.html
+++ b/index.html
@@ -5,47 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/style.css" rel="stylesheet" />
-    <title>Vite + TS</title>
+    <title>TypeScript Carousel</title>
   </head>
+
   <body>
-    <!-- slider container -->
     <div class="slider">
-      <!-- slide 1 -->
-      <div class="slide">
-        <img src="https://source.unsplash.com/random?japan+temples" alt="" />
-        <!--1-->
-      </div>
-
-      <!-- slide 2 -->
-      <div class="slide">
-        <img src="https://source.unsplash.com/random?food,ramen" alt="" />
-        <!--2-->
-      </div>
-
-      <!-- slide 3 -->
-      <div class="slide">
-        <img src="https://source.unsplash.com/random?tokyo" alt="" />
-        <!--3-->
-      </div>
-
-      <!-- slide 4 -->
-      <div class="slide">
-        <img src="https://source.unsplash.com/random?japan,cherry" alt="" />
-        <!--4-->
-      </div>
-
       <!-- Control buttons -->
       <button class="btn btn-next">&#62;</button>
       <button class="btn btn-prev">&#60;</button>
 
       <!-- Control dots -->
-      <div class="dot-container">
-        <button class="dot" data-slide="0"></button>
-        <button class="dot" data-slide="1"></button>
-        <button class="dot" data-slide="2"></button>
-        <button class="dot" data-slide="3"></button>
-      </div>
+      <div class="dots-container"></div>
 
+      <!-- Autplay btn / play and pause btns -->
       <button aria-label="autoplay" class="autoplay autoplay-start">
         <img src="/play.svg" alt="" />
       </button>
